--- a/extra_credit.tex
+++ b/extra_credit.tex
@@ -9,9 +9,99 @@
 \maketitle
 
 \section*{Chapter 3}
-\subsection*{Def 3.3.1}
+
+\subsection*{Def 3.1.1}
     Let f be a fn. w/ doman $D \subseteq \R$. Then f has a limit as x approaches infinity iff $\exists L \in \R$ s.t. for every $\mathcal{E} > 0, \exists M \in \R^+$ s.t. $|f(x) - L| < \mathcal{E}$, if $x \ge M \text{ and } x \in D$.
     If such an L exists, then L is called the limit of the fn f as x tends to infinity and we write $\lim_{x \to \infty} f(x) = L$
 
 \subsection*{Def 3.1.2}
+
+\subsection*{Thm 3.1.6}
+
+\subsection*{Thm 3.1.7}
+
+\subsection*{Thm 3.1.8}
+
+\subsection*{Def 3.1.9}
+
+\subsection*{Def 3.1.10}
+
+\subsection*{Def 3.2.1}
+
+\subsection*{Thm 3.2.5}
+
+\subsection*{Thm 3.2.6}
+
+\subsection*{Def 3.2.12}
+
+\subsection*{Thm 3.2.14}
+
+\subsection*{Def 3.3.1}
+
+\subsection*{Def 3.3.2}
+
+\subsection*{Def 3.3.4}
+
+\subsection*{Thm 3.3.7}
+
+\section*{Chapter 4}
+
+\subsection*{Def 4.1.1}
+
+\subsection*{Def 4.1.2}
+
+\subsection*{Sequential Criterion for Continuity Thm}
+
+\subsection*{Def 4.1.6}
+
+\subsection*{Thm 4.1.7}
+
+\subsection*{Thm 4.1.8}
+
+\subsection*{Thm 4.1.9}
+
+\subsection*{Def 4.2.1}
+
+\subsection*{Def 4.2.3}
+
+\subsection*{Def 4.2.5}
+
+\subsection*{Def 4.2.7}
+
+\subsection*{Def 4.3.1}
+
+\subsection*{Def 4.3.2}
+
+\subsection*{Thm 4.3.3}
+
+\subsection*{Thm 4.3.4}
+
+\subsection*{Thm 4.3.5}
+
+\subsection*{Thm 4.3.6}
+
+\subsection*{Def 4.3.7}
+
+\subsection*{Cor 4.3.8}
+
+\subsection*{Cor 4.3.9}
+
+\subsection*{Thm 4.3.10}
+
+\subsection*{Thm 4.3.11}
+
+\subsection*{Def 4.4.2}
+
+\subsection*{Def 4.4.1}
+
+\subsection*{Def 4.4.3}
+
+\subsection*{Thm 4.4.6}
+
+\subsection*{Def 4.4.6}
+
+\subsection*{Thm 4.4.11}
+
+\subsection*{Thm}
 \end{document}
+
